--- a/src/main/webapp/views/authenticated/voteList.xhtml
+++ b/src/main/webapp/views/authenticated/voteList.xhtml
@@ -3,7 +3,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="jakarta.faces.core" xmlns:ui="jakarta.faces.facelets"
-
+      xmlns:p="http://primefaces.org/ui"
 >
 
 <f:view>
@@ -22,32 +22,38 @@
 
     <h:body>
         <ui:include src="/views/anonymous/header.xhtml"/>
-        <h:form>
+        <h:form id="voteList">
             <div class="container">
+                <div>
+
+                    <p:barChart model="#{circulationDetailsBacking.barModel}"
+                                rendered="#{!sessionInfo.examinerInCurrentFaculty()}"
+                                style="width: 80%; height: 80%;"/>
+                </div>
 
                 <!--Table of the votes -->
 
-                <h:dataTable  value="#{circulationDetailsBacking.totalVotes}" var="vote"
+                <p:dataTable  value="#{circulationDetailsBacking.totalVotes}" var="vote"
                              rendered="#{!sessionInfo.examinerInCurrentFaculty()}" class="table table-bordered">
-                    <h:column>
+                    <p:column>
                         <f:facet name="header">Voted by</f:facet>
                         #{vote.votedByName}
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">Vote selection</f:facet>
                         #{vote.selection.label}
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">Vote reason</f:facet>
                         #{vote.description}
-                    </h:column>
-                </h:dataTable>
+                    </p:column>
+                </p:dataTable>
 
                 <!--Go back to circulation button -->
 
                 <h:link id="profil-link"
                         outcome="/views/authenticated/circulationDetails.xhtml?id=#{circulationDetailsBacking.circulation.id}"
-                        rendered="#{!sessionInfo.examiner}" value="Return to circulation" class="btn btn-primary"/>
+                        rendered="#{!sessionInfo.examinerInCurrentFaculty()}" value="Return to circulation" class="btn btn-primary"/>
             </div>
 
         </h:form>
