--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -71,7 +71,7 @@
                                     <h:outputText id="headre-titel-otxt" value="Titel"/>
                                     <h:inputText id="titel-itxt" value="#{circulationListBacking.filter.title}"
                                                  styleClass="form-control">
-                                        <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}"
+                                        <f:ajax id="load" event="change" listener="#{circulationListBacking.loadCirculations}"
                                                 render="@form"/>
 
                                     </h:inputText>
@@ -91,7 +91,7 @@
                                     <h:outputText id="header-doctoranden-otxt" value="Doktoranden"/>
                                     <h:inputText id="doctoranden-itxt" value="#{circulationListBacking.filter.doctoralCandidateName}"
                                                  styleClass="form-control">
-                                        <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}"
+                                        <f:ajax id="load" event="change" listener="#{circulationListBacking.loadCirculations}"
                                                 render="@form"/>
                                     </h:inputText>
                                 </f:facet>
@@ -105,7 +105,7 @@
                                     <h:outputText id ="header-doctoralSupervisor-otxt" value="Doktorvater"/>
                                     <h:inputText id ="doctoralSupervisor-itxt" value="#{circulationListBacking.filter.doctoralSupervisor}"
                                                  styleClass="form-control">
-                                        <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}"
+                                        <f:ajax id="load" event="change" listener="#{circulationListBacking.loadCirculations}"
                                                 render="@form"/>
                                     </h:inputText>
                                 </f:facet>
