--- a/src/main/webapp/views/deanery/userList.xhtml
+++ b/src/main/webapp/views/deanery/userList.xhtml
@@ -6,7 +6,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="jakarta.faces.facelets"
       xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:neme="http://java.sun.com/jsf/core">
+      xmlns:neme="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
 <f:view>
     <h:head>
@@ -28,10 +29,10 @@
 
                             <h:selectOneMenu id="userFaculty" value="#{userListBacking.facultyName}" rendered="#{sessionInfo.admin}"
                                              class="form-control scones-style">
-                                <f:selectItem itemLabel="Alle Fakultäten" itemValue="Alle Fakultäten"/>
+                                <f:selectItem itemLabel="Alle Fakultäten" itemValue=""/>
                                 <f:selectItems value="#{userListBacking.getAllUserFaculties()}" var="faculty"
                                                itemLabel="#{faculty}" itemValue="#{faculty}"/>
-                                <f:ajax event="change" listener="#{userListBacking.loadUsers()}" render="data"/>
+                                <f:ajax id="load" event="change" listener="#{userListBacking.loadUsers()}" render="data"/>
                             </h:selectOneMenu>
 
                             <!-- User State filter -->
@@ -41,7 +42,7 @@
                                 <f:selectItem itemLabel="Alle Benutzer" itemValue=""/>
                                 <f:selectItems value="#{userListBacking.getAllUserStates()}" var="state"
                                                itemLabel="#{state}" itemValue="#{state}"/>
-                                <f:ajax event="change" listener="#{userListBacking.loadUsers()}" render="data"/>
+                                <f:ajax id="load" event="change" listener="#{userListBacking.loadUsers()}" render="data"/>
                             </h:selectOneMenu>
 
 
@@ -68,7 +69,7 @@
                                 <f:facet name="header">
                                     <h:outputText id="header-firstName-otxt" value="First Name"/>
                                     <h:inputText id="firstName-itxt"  value="#{userListBacking.filter.firstName}" styleClass="form-control">
-                                        <f:ajax event="change" listener="#{userListBacking.loadUsers()}"
+                                        <f:ajax id="load" event="change" listener="#{userListBacking.loadUsers()}"
                                                 render="@form"/>
                                     </h:inputText>
                                 </f:facet>
@@ -82,7 +83,7 @@
                                 <f:facet name="header">
                                     <h:outputText id="header-lastname-otxt" value="Last Name"/>
                                     <h:inputText id="lastname-itxt" value="#{userListBacking.filter.lastName}" styleClass="form-control">
-                                        <f:ajax event="change" listener="#{userListBacking.loadUsers()}"
+                                        <f:ajax id="load" event="change" listener="#{userListBacking.loadUsers()}"
                                                 render="@form"/>
                                     </h:inputText>
                                 </f:facet>
@@ -94,7 +95,7 @@
                                 <f:facet name="header">
                                     <h:outputText id="headre-email-otxt" value="Email"/>
                                     <h:inputText id="email-itxt" value="#{userListBacking.filter.email}" styleClass="form-control">
-                                        <f:ajax event="change" listener="#{userListBacking.loadUsers()}"
+                                        <f:ajax id="load" event="change" listener="#{userListBacking.loadUsers()}"
                                                 render="@form"/>
                                     </h:inputText>
                                 </f:facet>
