fixing name of the App

--- a/src/main/webapp/views/anonymous/template.xhtml
+++ b/src/main/webapp/views/anonymous/template.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
    <h:head>
-      <title>My Web App</title>
+      <title>DocThesisTracker</title>
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
       <script type="text/javascript" src="/resources/js/script.js"></script>
    </h:head>
