--- a/src/main/webapp/views/anonymous/login.xhtml
+++ b/src/main/webapp/views/anonymous/login.xhtml
@@ -16,7 +16,7 @@
         <ui:define name="mainContent">
             <div class="container">
                 <div class="back jumbotron text-center"> <!-- Bootstrap Jumbotron für Highlight-Effekt -->
-                    <h2 class="display-5">Willkommen auf DocTheisesTracker!</h2>
+                    <h2 class="display-5">Willkommen auf DocThesisTracker!</h2>
                 </div>
                 <div class="row justify-content-center mt-5">
                     <div class="col-md-6">
