--- a/src/main/webapp/views/anonymous/errorPage.xhtml
+++ b/src/main/webapp/views/anonymous/errorPage.xhtml
@@ -3,13 +3,16 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
-      xmlns:f="jakarta.faces.core">
+      xmlns:f="jakarta.faces.core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
     <title>Error Page</title>
 </h:head>
 <h:body>
+    <ui:composition template="template.xhtml">
     <h1>Error Page</h1>
     <h:outputText value="#{errorPageBacking.errorMessage}" />
+    </ui:composition>
 </h:body>
 
 </html>
